tenzir/tests/ir/one_let_with_unknown_var.txt
error: unknown variable
 --> ir/one_let_with_unknown_var.tql:2:12
  |
2 | let $foo = $bar
  |            ^^^^ 
  |
  = hint: no variables are available here
